# Logify

./: .gitignore  CMakeLists.txt  Readme.md  generate.ps1  generate.sh
.github/workflows/: build-test.yml
Logify/: CMakeLists.txt
Logify/internal/: FileStream.h  LoggerImpl.h  Logify_internal.h  ScopedLoggerImpl.h
Logify/source/: FileStream.cpp  Logger.cpp  LoggerImpl.cpp  Logify.cpp  Logify_internal.cpp  ScopedLogger.cpp  getPid.cpp
cmake/: LogifyConfig.cmake.in
dependencies/linux_x86_64/Catch2/share/pkgconfig/: catch2.pc
dependencies/win_x86_64/Catch2/lib/cmake/Catch2/: Catch2ConfigVersion.cmake  Catch2Targets.cmake
dependencies/win_x86_64/Catch2/share/pkgconfig/: catch2.pc
examples/: CMakeLists.txt
examples/example_01/: CMakeLists.txt  main.cpp
include/Logify/: ColorScheme.h  Logger.h  Logify.h  Logify_export.h  ScopedLogger.h
media/: application_0000.html
tests/: CMakeLists.txt
tests/LogifyTests/: CMakeLists.txt  LoggerTests.cpp  versionTests.cpp
